# cxx-kde-frameworks

./: .gitignore  Cargo.toml  README.md
include/kcoreaddons/: kaboutdata.h
include/kcrash/: kcrash.h
include/ki18n/: klocalizedcontext.h  klocalizedstring.h
kf6/: Cargo.toml  build.rs
kf6-build/: Cargo.toml
kf6-build/include/ki18n/: klocalizedcontext.h  klocalizedstring.h
kf6-build/src/: lib.rs
kf6/src/ki18n/: klocalizedcontext.rs  klocalizedstring.cpp  klocalizedstring.rs  mod.rs
src/: lib.rs
src/kcoreaddons/: kaboutdata.cpp  kaboutdata.rs  license.rs  mod.rs  models.rs
src/kcrash/: kcrash.cpp  kcrash.rs  mod.rs
src/ki18n/: klocalizedcontext.cpp  klocalizedcontext.rs  klocalizedstring.cpp  klocalizedstring.rs  kstringextensions.rs  mod.rs
